--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,72 @@
-.App {
-  text-align: center;
-}
+html,
+    body {
+      width: 800px;
+      margin: 0 auto;
+      background: gray;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    h1{
+      color: white;
+    }
+    canvas {
+      margin: 0 auto;
+      background: white;
+    }
 
-.App-logo {
-  height: 40vmin;
-}
+    canvas {
+      border: 1px black solid;
+    }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    button {
+      border: 1px solid white;
+    }
+    input {
+      position: relative;
+      top: 6px;
+    }
+    #red {
+      color: red;
+      background: red;
+    }
 
-.App-link {
-  color: #09d3ac;
-}
+    #orange {
+      color: orange;
+      background: orange;
+    }
+
+    #yellow {
+      color: yellow;
+      background: yellow;
+    }
+
+    #green {
+      color: green;
+      background: green;
+    }
+
+    #blue {
+      color: blue;
+      background: blue;
+    }
+    #cyan {
+      color: cyan;
+      background: cyan;
+    }
+    #purple {
+      color: purple;
+      background: purple;
+    }
+    #violet {
+      color: violet;
+      background: violet;
+    }
+
+    #black {
+      color: black;
+      background: black;
+    }
+
+    #currentColor {
+      background: black;
+
+    }
